Web interface to run and step through programs

--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Sortle Interpreter</title>
+    <link rel="stylesheet" href="index.css"
+          type="text/css" media="screen, projection">
   </head>
   <body>
     <div id="root">
